<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/num9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num8"
        android:layout_alignBottom="@+id/num8"
        android:layout_alignLeft="@+id/num6"
        android:text="@string/nine" />

    <Button
        android:id="@+id/num5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num2"
        android:layout_toLeftOf="@+id/num3"
        android:text="@string/five" />

    <Button
        android:id="@+id/num6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num5"
        android:layout_alignBottom="@+id/num5"
        android:layout_toRightOf="@+id/num5"
        android:text="@string/six" />

    <Button
        android:id="@+id/num7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num4"
        android:layout_toLeftOf="@+id/num5"
        android:text="@string/seven" />

    <Button
        android:id="@+id/num8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num7"
        android:layout_alignBottom="@+id/num7"
        android:layout_toRightOf="@+id/num7"
        android:text="@string/eight" />

    <Button
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multiply"
        android:layout_below="@+id/multiply"
        android:text="@string/divide" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/num6"
        android:layout_alignBottom="@+id/num6"
        android:layout_alignLeft="@+id/add"
        android:text="@string/minus" />

    <Button
        android:id="@+id/num0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/divide"
        android:layout_alignBottom="@+id/divide"
        android:layout_alignLeft="@+id/num7"
        android:text="@string/zero" />

    <Button
        android:id="@+id/pow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/divide"
        android:layout_alignBottom="@+id/divide"
        android:layout_toLeftOf="@+id/divide"
        android:text="@string/power" />

    <Button
        android:id="@+id/decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num9"
        android:layout_toLeftOf="@+id/num9"
        android:text="@string/decimal" />

    <Button
        android:id="@+id/num3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/num6"
        android:layout_toRightOf="@+id/num2"
        android:text="@string/three" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/num6"
        android:layout_toRightOf="@+id/num6"
        android:text="@string/add" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subtract"
        android:layout_below="@+id/subtract"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/num4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/num1"
        android:layout_below="@+id/num1"
        android:text="@string/four" />

    <Button
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/num4"
        android:layout_toRightOf="@+id/num4"
        android:text="@string/two" />

    <EditText
        android:id="@+id/math"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:editable="false"
        android:ems="10"
        android:inputType="none"
        android:singleLine="true" >

        <requestFocus />

    </EditText>

    <Button
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/math"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="39dp"
        android:text="@string/one" />

    <ImageButton
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divide"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/equal"
        android:contentDescription="@string/omlet"
        android:background="@null"
        android:src="@drawable/omlet" />

    <Button
        android:id="@+id/equal"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/post"
        android:layout_toLeftOf="@+id/pow"
        android:text="@string/equal"
        android:textSize="30sp" />

    <Button
        android:id="@+id/clear"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/post"
        android:layout_toLeftOf="@+id/post"
        android:text="@string/clear"
        android:textSize="30sp" />

</RelativeLayout>
